--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <!-- #endregion strategy -->
         <!-- #region our team -->
         <section class="section team">
-            <div class="container">
+            <div class="container container-desinger">
                 <h2 class="team-logo">Our Team</h2>
                 <ul class="team-designer">
                     <li class="team-list">
@@ -281,7 +281,7 @@
         <!-- #endregion our team -->
         <!-- #region our portfolio -->
          <section class="section portfolio">
-            <div class="container">
+            <div class="container container-our-portfolio">
                 <h2 class="portfolio-logo">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-list-l">
@@ -596,6 +596,7 @@
 
         </div>
     </div>
+
  
     <!-- mobile-menu -->
      <div class="mobile-menu-wrap is-hidden">
@@ -605,52 +606,56 @@
                     <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
             </button>
-            <ul class="header-nav-menu">
-                <li class="header-mob-nav">
-                    <a href="./index.html" class="header-mob-item">Studio</a>
-                </li>
-                <li class="header-mob-nav">
-                    <a href="" class="header-mob-item">Portfolio</a>
-                </li>
-                <li class="header-mob-nav header-mob-header">
-                    <a href="" class="header-mob-item">Contacts</a>
-                </li>
-            </ul>
+            <nav>
+                <ul class="header-nav-menu">
+                    <li class="header-mob-nav">
+                        <a href="./index.html" class="header-mob-item">Studio</a>
+                    </li>
+                    <li class="header-mob-nav">
+                        <a href="" class="header-mob-item">Portfolio</a>
+                    </li>
+                    <li class="header-mob-nav header-mob-header">
+                        <a href="" class="header-mob-item">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
 
-            <ul>
-                <li class="header-mob-adr">
-                    <a href="tel:+110001111111" class="address-list-item">+11 (000) 111-11-11</a>
-                </li>
-                <li class="header-mob-adr">
-                    <a href="mailto:info@devstudio.com" class="address-list-item">info@devstudio.com</a>
-                </li>
-            </ul>
+            <address>
+                <ul>
+                    <li class="header-mob-adr">
+                        <a href="tel:+110001111111" class="header-mob-address">+11 (000) 111-11-11</a>
+                    </li>
+                    <li class="header-mob-adr header-mob-adr-no">
+                        <a href="mailto:info@devstudio.com" class="header-mob-address">info@devstudio.com</a>
+                    </li>
+                </ul>
+            </address>
 
             <ul class="header-mob-icon-net">
                 <li class="header-mob-icon">
                     <a class="team-icon-link-adr" href="https://www.instagram.com/" target="_blank">
-                        <svg class="team-icon-link-net" width="16" height="16">
+                        <svg class="team-icon-link-net" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="header-mob-icon">
                     <a class="team-icon-link-adr" href="https://twitter.com/" target="_blank">
-                        <svg class="team-icon-link-net" width="16" height="16">
+                        <svg class="team-icon-link-net" width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="header-mob-icon">
                     <a class="team-icon-link-adr" href="https://facebook.com/" target="_blank">
-                        <svg class="team-icon-link-net" width="16" height="16">
+                        <svg class="team-icon-link-net" width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="header-mob-icon">
                     <a class="team-icon-link-adr" href="https://linkedin.com/" target="_blank">
-                        <svg class="team-icon-link-net" width="16" height="16">
+                        <svg class="team-icon-link-net" width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
