--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
             <button class="popup-close" type="button">
                 <svg class="popup-close-butn-icon" width="8" height="8">
@@ -582,13 +582,15 @@
                 <div class="form-checkbox">
                     <input class="form-box visually-hidden" type="checkbox" name="user-privacy" value="true" id="user-privacy">
                     <label class="form-box-text" for="user-privacy">
-                        <div>
-                            <span class="form-box-text-span"><svg class="form-box-icon-checkbox" width="10" height="8">
-                            <use href="./images/icons.svg#icon-vector-click"></use>
-                            </svg></span>
-                        </div>
-                        <div>I accept the terms and conditions of the <a href="#" class="form-box-text-a">Privacy Policy</a>
-                        </div>
+                        <span class="form-box-text-span">
+                            <svg class="form-box-icon-checkbox" width="10" height="8">
+                                <use href="./images/icons.svg#icon-vector-click"></use>
+                            </svg>
+                        </span>
+                        <span>
+                            I accept the terms and conditions of the
+                            <a href="#" class="form-box-text-a">Privacy Policy</a>
+                        </span>
                     </label>
                 </div>
                 <button type="submit" class="form-checkbox-button">Send</button>
